jumping and air control added (to player 1)

--- a/TankLeague 4.23/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague 4.23/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,20 +147,22 @@ OpenAssetsAtExit=/Game/Blueprints/PauseMenu.PauseMenu
 OpenAssetsAtExit=/Game/Blueprints/TankLeagueHUD.TankLeagueHUD
 OpenAssetsAtExit=/Game/Blueprints/tankgamemode.tankgamemode
 OpenAssetsAtExit=/Game/TankLeagueMap.TankLeagueMap:PersistentLevel.TankLeagueMap
+OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/TankLeagueHUD
-MRUItem1=/Game/TankLeagueMap
-MRUItem2=/Game/MainMenu
-MRUItem3=/Game/Blueprints/goal
-MRUItem4=/Game/Blueprints/tankgamemode
-MRUItem5=/Game/Blueprints/PauseMenu
-MRUItem6=/Game/MainMenuAssets/MainMenu
-MRUItem7=/Game/Blueprints/HUDManager
-MRUItem8=/Game/MainMenuAssets/MainMenuMode
-MRUItem9=/Game/MainMenuAssets/MainMenuHUD
-MRUItem10=/Game/MainMenuAssets/NewGameMode
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem0=/Game/Blueprints/TankUnit
+MRUItem1=/Game/Blueprints/TankLeagueHUD
+MRUItem2=/Game/TankLeagueMap
+MRUItem3=/Game/MainMenu
+MRUItem4=/Game/Blueprints/goal
+MRUItem5=/Game/Blueprints/tankgamemode
+MRUItem6=/Game/Blueprints/PauseMenu
+MRUItem7=/Game/MainMenuAssets/MainMenu
+MRUItem8=/Game/Blueprints/HUDManager
+MRUItem9=/Game/MainMenuAssets/MainMenuMode
+MRUItem10=/Game/MainMenuAssets/MainMenuHUD
+MRUItem11=/Game/MainMenuAssets/NewGameMode
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownGameMode
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -523,6 +525,66 @@ K2Node_FunctionEntry.Outputs=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+TankUnit_C.Tick=True
+TankUnit_C.Default=True
+TankUnit_C.Pawn=True
+TankUnit_C.Camera=True
+TankUnit_C.Rendering=True
+TankUnit_C.Replication=True
+TankUnit_C.Input=True
+TankUnit_C.Actor=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_InputAction.Input=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+K2Node_GetInputAxisValue.Input=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+Ball_C.TransformCommon=True
+Ball_C.Rendering=True
+Ball_C.Replication=True
+Ball_C.Input=True
+Ball_C.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.VirtualTexture=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1246,6 +1308,72 @@ Special Effects=True
 User Created=False
 Advanced=False
 
+[DetailCustomWidgetExpansion]
+CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+GeneralProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+GameplayTagsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+GameMapsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+MoviePlayerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+ProjectPackagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+HardwareTargetingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AssetManagerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AssetToolsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AISystem=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AnimationSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AudioSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+ChaosSolverSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+CollisionProfile=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+ConsoleSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+CookerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+CrowdManager=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+DebugCameraControllerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+GarbageCollectionSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+Engine=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+HierarchicalLODSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+InputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+LandscapeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+RecastNavMesh=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+NavigationSystemV1=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+NetworkSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+PhysicsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+RendererSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+RendererOverrideSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+SlateSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+StreamingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+TutorialSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+UserInterfaceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+LevelEditor2DSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+EditorProjectAppearanceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+BlueprintEditorProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+ClassViewerProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+MeshSimplificationSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+PaperImporterSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+SkeletalMeshSimplificationSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+StructViewerProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+TextureImportSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+UMGEditorProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AndroidRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+ShaderPlatformQualitySettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AndroidSDKSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+HTML5TargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+IOSRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+LinuxTargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+MacTargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+LuminRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+MagicLeapSDKSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+WindowsTargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+AvfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+ImgMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+LevelSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+MagicLeapSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.p1 jump,
+
 [UMGEditor.Designer]
 PreviewWidth=1280
 PreviewHeight=720
@@ -1314,6 +1442,7 @@ PanelWidget=
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
 DeveloperSettings=
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/MainMenuAssets/MainMenu.MainMenu=1
@@ -1328,6 +1457,6 @@ BackgroundBlur.Appearance=False
 ProjectPackagingSettings.Packaging=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 
