player 2 has jump and air control, also ball explodes now at a score

--- a/TankLeague 4.23/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague 4.23/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,21 +148,24 @@ OpenAssetsAtExit=/Game/Blueprints/TankLeagueHUD.TankLeagueHUD
 OpenAssetsAtExit=/Game/Blueprints/tankgamemode.tankgamemode
 OpenAssetsAtExit=/Game/TankLeagueMap.TankLeagueMap:PersistentLevel.TankLeagueMap
 OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
+OpenAssetsAtExit=/Game/Blueprints/goal.goal
+OpenAssetsAtExit=/Game/Blueprints/Ball.Ball
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/TankUnit
-MRUItem1=/Game/Blueprints/TankLeagueHUD
-MRUItem2=/Game/TankLeagueMap
-MRUItem3=/Game/MainMenu
-MRUItem4=/Game/Blueprints/goal
-MRUItem5=/Game/Blueprints/tankgamemode
-MRUItem6=/Game/Blueprints/PauseMenu
-MRUItem7=/Game/MainMenuAssets/MainMenu
-MRUItem8=/Game/Blueprints/HUDManager
-MRUItem9=/Game/MainMenuAssets/MainMenuMode
-MRUItem10=/Game/MainMenuAssets/MainMenuHUD
-MRUItem11=/Game/MainMenuAssets/NewGameMode
-MRUItem12=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem0=/Game/Blueprints/Ball
+MRUItem1=/Game/Blueprints/goal
+MRUItem2=/Game/Blueprints/TankUnit
+MRUItem3=/Game/Blueprints/TankLeagueHUD
+MRUItem4=/Game/TankLeagueMap
+MRUItem5=/Game/MainMenu
+MRUItem6=/Game/Blueprints/tankgamemode
+MRUItem7=/Game/Blueprints/PauseMenu
+MRUItem8=/Game/MainMenuAssets/MainMenu
+MRUItem9=/Game/Blueprints/HUDManager
+MRUItem10=/Game/MainMenuAssets/MainMenuMode
+MRUItem11=/Game/MainMenuAssets/MainMenuHUD
+MRUItem12=/Game/MainMenuAssets/NewGameMode
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownGameMode
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -585,6 +588,9 @@ BoxComponent.Tags=True
 BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+Ball_C.Tick=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
