Win screen and goal rumble

--- a/TankLeague 4.23/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague 4.23/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,39 +133,35 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/TankLeagueMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MainMenuAssets/MainMenuMode.MainMenuMode
-OpenAssetsAtExit=/Game/MainMenuAssets/MainMenuHUD.MainMenuHUD
-OpenAssetsAtExit=/Game/Blueprints/HUDManager.HUDManager
-OpenAssetsAtExit=/Game/MainMenuAssets/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/Blueprints/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/Blueprints/TankLeagueHUD.TankLeagueHUD
-OpenAssetsAtExit=/Game/Blueprints/tankgamemode.tankgamemode
-OpenAssetsAtExit=/Game/TankLeagueMap.TankLeagueMap:PersistentLevel.TankLeagueMap
-OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
+OpenAssetsAtExit=/Game/Blueprints/WinScreen.WinScreen
 OpenAssetsAtExit=/Game/Blueprints/goal.goal
-OpenAssetsAtExit=/Game/Blueprints/Ball.Ball
+OpenAssetsAtExit=/Game/Blueprints/tankgamemode.tankgamemode
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Ball
-MRUItem1=/Game/Blueprints/goal
-MRUItem2=/Game/Blueprints/TankUnit
-MRUItem3=/Game/Blueprints/TankLeagueHUD
-MRUItem4=/Game/TankLeagueMap
-MRUItem5=/Game/MainMenu
-MRUItem6=/Game/Blueprints/tankgamemode
-MRUItem7=/Game/Blueprints/PauseMenu
-MRUItem8=/Game/MainMenuAssets/MainMenu
-MRUItem9=/Game/Blueprints/HUDManager
-MRUItem10=/Game/MainMenuAssets/MainMenuMode
-MRUItem11=/Game/MainMenuAssets/MainMenuHUD
-MRUItem12=/Game/MainMenuAssets/NewGameMode
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem0=/Game/Blueprints/WinScreen
+MRUItem1=/Game/Blueprints/tankgamemode
+MRUItem2=/Game/Blueprints/goal
+MRUItem3=/Game/Blueprints/ScoreShake
+MRUItem4=/Game/Blueprints/Ball
+MRUItem5=/Game/Blueprints/TankUnit
+MRUItem6=/Game/Blueprints/TankLeagueHUD
+MRUItem7=/Game/TankLeagueMap
+MRUItem8=/Game/MainMenu
+MRUItem9=/Game/Blueprints/PauseMenu
+MRUItem10=/Game/MainMenuAssets/MainMenu
+MRUItem11=/Game/Blueprints/HUDManager
+MRUItem12=/Game/MainMenuAssets/MainMenuMode
+MRUItem13=/Game/MainMenuAssets/MainMenuHUD
+MRUItem14=/Game/MainMenuAssets/NewGameMode
+MRUItem15=/Game/TopDownBP/Blueprints/TopDownGameMode
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -591,6 +587,27 @@ BoxComponent.Events=True
 IntProperty.Variable=True
 IntProperty.DefaultValueCategory=True
 Ball_C.Tick=True
+ScoreShake_C.CameraShake=True
+ScoreShake_C.Oscillation=True
+ScoreShake_C.AnimShake=True
+WinScreen_C.Appearance=True
+WinScreen_C.Designer=True
+WinScreen_C.Input=True
+WinScreen_C.Interaction=True
+WinScreen_C.Performance=True
+WinScreen_C.Layout=True
+WinScreen_C.Behavior=True
+WinScreen_C.Render Transform=True
+WinScreen_C.Accessibility=True
+WinScreen_C.Clipping=True
+WinScreen_C.Navigation=True
+WinScreen_C.Localization=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+WinScreen_C.Default=True
+K2Node_MakeStruct.PinOptions=True
+K2Node_BreakStruct.PinOptions=True
+K2Node_SwitchInteger.PinOptions=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1303,14 +1320,14 @@ ExternalImagePicker.TimeStamp=2019.11.08-09.30.37
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
-Editor=True
+Editor=False
 Input=False
 Lists=False
 Misc=False
 Optimization=False
 Panel=False
 Primitive=False
-Special Effects=True
+Special Effects=False
 User Created=False
 Advanced=False
 
@@ -1437,11 +1454,11 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [DetailPropertyExpansion]
-TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
-Widget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
-Visual="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
-Object="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Object="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 BackgroundBlur="\"Object.Appearance.LowQualityFallbackBrush\" "
 ContentWidget=
 PanelWidget=
@@ -1449,11 +1466,24 @@ AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
 DeveloperSettings=
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
+ScoreShake_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" \"Object.Oscillation.FOVOscillation\" "
+CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" \"Object.Oscillation.FOVOscillation\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/MainMenuAssets/MainMenu.MainMenu=1
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
 /Game/Blueprints/goal.goal=1
+/Game/MainMenuAssets/MainMenuHUD.MainMenuHUD=1
+/Game/MainMenuAssets/MainMenuMode.MainMenuMode=1
+/Game/Blueprints/HUDManager.HUDManager=1
+/Game/Blueprints/PauseMenu.PauseMenu=1
+/Game/Blueprints/tankgamemode.tankgamemode=1
+/Game/Blueprints/TankLeagueHUD.TankLeagueHUD=1
+/Game/TankLeagueMap.TankLeagueMap:PersistentLevel.TankLeagueMap=1
+/Game/Blueprints/TankUnit.TankUnit=1
+/Game/Blueprints/Ball.Ball=1
+/Game/Blueprints/WinScreen.WinScreen=1
+/Game/Blueprints/ScoreShake.ScoreShake=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1464,5 +1494,8 @@ ProjectPackagingSettings.Packaging=True
 
 [MessageLog]
 LastLogListing=BlueprintLog
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
